# kilometrix

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  docker-compose.prod.yml  docker-compose.yml  go.mod  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
addin/: app.js  commands.html  manifest.server.template.xml  manifest.server.xml  manifest.xml  styles.css  taskpane.html
backend/: config.py  geocode.py  io_excel.py  jobs.py  main.py  osrm_process.py  routing.py  tokens.py
cmd/kilometrix/: main.go
frontend/: app.py
gui/: .gitignore  app.go  go.mod  main.go  proc_unix.go  proc_windows.go  wails.json
gui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
gui/frontend/src/: main.ts  style.css
gui/frontend/wailsjs/go/: models.ts
gui/frontend/wailsjs/go/main/: App.d.ts  App.js
internal/binutil/: proc_unix.go  proc_windows.go  resolve.go
internal/config/: config.go  mmap_default_other.go  mmap_default_windows.go
internal/geocode/: geocode.go  geocode_test.go
internal/osrm/: proc_unix.go  proc_windows.go  process.go
internal/routing/: routing.go  routing_test.go
internal/runtime/: serve.go
internal/server/: server.go  server_test.go
internal/tlscert/: cert.go
internal/tokens/: tokens.go  tokens_test.go
profiles/: truck.lua
scripts/: _geonames_centroids.py  build_geocode.ps1  build_geocode.sh  build_graph.ps1  build_graph.sh  serve_addin.ps1  serve_addin.sh  start.sh
tests/: test_geocode.py  test_io_excel.py  test_routing.py  test_tokens.py
