[project]
name = "kilometrix"
version = "0.1.0"
description = "Offline-Berechnung von Straßen-Kilometern und Fahrzeiten für Origin→Destination-Paare via OSRM (in-process)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.33",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pyarrow>=15.0",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
# In-process-Engine. Achtung: das PyPI-Wheel ist archiviert und 135 Commits hinter
# osrm-backend Stable; für eine zum Graphen passende Version Source-Build nötig:
#   pip install --no-binary osrm-bindings osrm-bindings
bindings = [
    "osrm-bindings>=0.3.0",
]
dev = [
    "pytest>=8.0",
    "honcho>=1.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
